# stremio-status

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  dokploy-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
deployment/: dokploy-compose.yaml
gatus/: config.yaml
status-page/gatus/: config.yaml
status-page/grafana/provisioning/datasources/: gatus.yaml
stremio_status/: main.py
stremio_status/clients/: gatus_client.py
stremio_status/core/: cache.py  config.py  constants.py  models.py  user_config.py
stremio_status/endpoints/: configurator.py  health.py  static.py  stremio.py
stremio_status/services/: status_service.py
stremio_status/static/: configure.html
stremio_status/utils/: ui.py
